Bizfi Production/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>McaApp__Standard Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement Requested</fullName>
        </values>
        <values>
            <fullName>Agreement Sent</fullName>
        </values>
        <values>
            <fullName>Agreement Signed</fullName>
        </values>
        <values>
            <fullName>Application In</fullName>
        </values>
        <values>
            <fullName>Application Missing Info</fullName>
        </values>
        <values>
            <fullName>Application Sent</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Funding Source</fullName>
        </values>
        <values>
            <fullName>Closed Lost - Merchant</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Funded</fullName>
        </values>
        <values>
            <fullName>Renewal Prospecting</fullName>
        </values>
        <values>
            <fullName>Renewal Requested</fullName>
        </values>
        <values>
            <fullName>Underwriting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>APR__c</fullName>
        <label>APR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ad_Campaign__c</fullName>
        <label>Ad Campaign</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Group__c</fullName>
        <label>Ad Group</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Position__c</fullName>
        <label>Ad Position</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_Rate__c</fullName>
        <label>Advance Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agreement_Requested_Date_Time__c</fullName>
        <label>Agreement Requested Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Sent_Date_Time__c</fullName>
        <label>Agreement Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Signed_Date_Time__c</fullName>
        <label>Agreement Signed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_on_Check__c</fullName>
        <label>Amount on Check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_Monthly_Bank_Deposits__c</fullName>
        <label>$ Monthly Bank Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_In_Date_Time__c</fullName>
        <label>Application In Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Missing_Info_Date_Time__c</fullName>
        <label>Application Missing Info Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Sent_Date_Time__c</fullName>
        <label>Application Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Time__c</fullName>
        <label>Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_Opp__c</fullName>
        <formula>Submissions_Approved__c &gt;=1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_for_Great_Plains_Date_Time__c</fullName>
        <label>Approved for Great Plains Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_for_Great_Plains__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Great Plains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Credit_Score_Range__c</fullName>
        <formula>McaApp__Owner_1__r.Credit_Score_Range__c</formula>
        <label>C.Credit Score Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_DNC__c</fullName>
        <formula>IF ( McaApp__Owner_1__r.DoNotCall = true , true , false )</formula>
        <label>C.DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Email__c</fullName>
        <formula>McaApp__Owner_1__r.Email</formula>
        <label>C.Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_First_Name__c</fullName>
        <formula>McaApp__Owner_1__r.FirstName</formula>
        <label>C.First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Last_Name__c</fullName>
        <formula>McaApp__Owner_1__r.LastName</formula>
        <label>C.Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Mobile__c</fullName>
        <formula>McaApp__Owner_1__r.MobilePhone</formula>
        <label>C.Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <label>Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chosen_Pre_Approvals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Chosen Pre-Approvals</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Date_Time__c</fullName>
        <label>Closed Lost Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Duplicate_Date_Time__c</fullName>
        <label>Closed Lost - Duplicate Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Funding_Source_Date_Time__c</fullName>
        <label>Closed Lost - Funding Source Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Merchant_Date_Time__c</fullName>
        <label>Closed Lost - Merchant Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Renewed_Date_Time__c</fullName>
        <label>Closed/Renewed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collateral_Amount__c</fullName>
        <label>Collateral Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <label>Collateral Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <label>Collateral?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Notes__c</fullName>
        <label>Commission Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Split__c</fullName>
        <label>Commission Split</label>
        <picklist>
            <picklistValues>
                <fullName>SO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <label>Contract ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Amount__c</fullName>
        <label>Contracted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coupon_Tracking_Code__c</fullName>
        <label>Coupon Tracking Code</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Amount__c</fullName>
        <label>Credit Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Lead_Partner__c</fullName>
        <formula>IF(AND(ISBLANK(MCACE__ISO_1_Lead_Source__c),ISBLANK(MCACE__ISO_2__c),ISBLANK(MCACE__ISO_3__c),ISBLANK(MCACE__ISO_4__c)),FALSE,TRUE)</formula>
        <label>Current Lead Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Business_Established__c</fullName>
        <formula>Account.McaApp__Date_Business_Established__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Business Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Margin_Percent__c</fullName>
        <description>The margin of the deal as a percentage of total revenue.</description>
        <formula>Deal_Margin__c /  McaApp__Total_Receivables__c</formula>
        <inlineHelpText>Deal Margin divided by Total Receivables.</inlineHelpText>
        <label>Deal Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Margin__c</fullName>
        <description>Calculates the total gross revenue less any commission related expenses.</description>
        <formula>McaApp__Total_Receivables__c - McaApp__Total_Payables__c</formula>
        <inlineHelpText>Total Receivables less Total Payables</inlineHelpText>
        <label>Deal Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Decline_Email_Sent_Date_Time__c</fullName>
        <label>Decline Email Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decline_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decline Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Declined_Date_Time__c</fullName>
        <label>Declined Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DupRefLeadCampaign__c</fullName>
        <label>DupRefLeadCampaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupRefLeadCompany__c</fullName>
        <label>DupRefLeadCompany</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupRefLeadId2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DupRefLeadId</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DupRefLeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DupRefLeadId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (DupRefLeadId)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DupRefLeadLink__c</fullName>
        <label>DupRefLeadLink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupRefOppAccount__c</fullName>
        <label>DupRefOppAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupRefOppCampaign__c</fullName>
        <label>DupRefOppCampaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupRefOppId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DupRefOppId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Duplicate Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DupRefOppLink__c</fullName>
        <label>DupRefOppLink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Reason__c</fullName>
        <label>Duplicate Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Application Timed Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead Opp Timed Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Merchant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded Opportunity paid off for more than 60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to Contracted Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to Existing Submitted Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to Funded Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to New Submitted Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to recent Active Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to recent Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to recent Dead Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to recent Inactive Lead</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Paid__c</fullName>
        <formula>IF ( McaApp__Term_Months__c != 0, ( TODAY() -  McaApp__Date_Funded__c ) / ( McaApp__Term_Months__c * 365/12 ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated % Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Executive_Approval_Date_Time__c</fullName>
        <label>Executive Approval Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Executive_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Daily_Payment__c</fullName>
        <label>Expected Daily Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>CASE( StageName , 
&apos;Application Sent&apos;, IMAGE(&quot;/resource/McaApp__StatusBars/appsent.png&quot;, &quot;App Sent&quot;), 
&apos;Application In&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/appreceived.png&quot;, &quot;App Signed&quot;), 
&apos;Application Missing Info&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/appreceived.png&quot;, &quot;App Signed&quot;), 
&apos;Underwriting&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/underwriting.png&quot;, &quot;Underwriting&quot;), 
&apos;Declined&apos; ,IMAGE(&quot;/resource/McaApp__StatusBars/declined.png&quot;, &quot;Declined&quot;), 
&apos;Approved&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/approved.png&quot;, &quot;Approved&quot;),  
&apos;Agreement Requested&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/approved.png&quot;, &quot;Approved&quot;), 
&apos;Agreement Sent&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/approved.png&quot;, &quot;Approved&quot;),
&apos;Agreement Signed&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/contractsigned.png&quot;, &quot;Contract Signed&quot;), 
&apos;Funded&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, &quot;Funded&quot;), 
&apos;Closed Lost - Merchant&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/declined.png&quot;, &quot;Declined&quot;), 
&apos;Closed Lost - Funding Source&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/declined.png&quot;, &quot;Declined&quot;), 
&apos;Renewal Prospecting&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, &quot;Funded&quot;), 
&apos;Renewal Requested&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/appreceived.png&quot;, &quot;App Signed&quot;), 
IMAGE(&quot;/resource/McaApp__StatusBars/blank.png&quot;,&quot;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>-</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flagged_for_Duplicate_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flagged for Duplicate Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funded_Date_Key__c</fullName>
        <formula>IF(ISBLANK(McaApp__Date_Funded__c),&apos;&apos;,CASE(MONTH(McaApp__Date_Funded__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;&quot;)&amp;&quot;###&quot;&amp;TEXT(YEAR(McaApp__Date_Funded__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funded Date Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_Date_Month_Year__c</fullName>
        <formula>TEXT(YEAR(McaApp__Date_Funded__c))&amp; &quot;-&quot; &amp; TEXT(MONTH( McaApp__Date_Funded__c ))</formula>
        <label>Funded Date - Month &amp; Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_Date_Time__c</fullName>
        <label>Funded Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Sales__c</fullName>
        <label>Gross Annual Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry_Type__c</fullName>
        <label>Industry Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>text(Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Invoice #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Is_Bizfi_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked True if the Funder from at least one Submission is Bizfi Funding</description>
        <label>Is Bizfi Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Judgements_Liens__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Judgements/Liens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Junk_Invoice__c</fullName>
        <formula>&quot;1&quot;&amp;Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Junk Invoice #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Page_Completed__c</fullName>
        <label>Last Page Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lazarus_ID__c</fullName>
        <label>Lazarus ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <label>Lead ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <picklist>
            <picklistValues>
                <fullName>FMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Account.McaApp__Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCACE__Commissions_Payable_External__c</fullName>
        <label>Commissions Payable - External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_1_Lead_Source_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #1 / Lead Source Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (ISO #1 / Lead Source Sales Rep)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_1_Lead_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #1 / Lead Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (ISO #1 / Lead Source)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_2_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #2 Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (ISO #2 Sales Rep)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (ISO #2)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_3_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #3 Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (ISO #3 Sales Rep)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (ISO #3)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_4_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #4 Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (ISO #4 Sales Rep)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__ISO_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO #4</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (iSO #4)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCACE__Origination_Fees_Payable_External__c</fullName>
        <label>Origination Fees Payable - External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MCACE__Remaining_Origination_Fees_Receivable__c</fullName>
        <formula>McaApp__Total_Origination_Fees_Receivable__c - McaApp__Origination_Fees_Payable_External__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Origination Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MCACE__Total_Remaining_Recievables_Amount__c</fullName>
        <formula>McaApp__Total_Commissions_Receivable__c -  McaApp__Commissions_Payable_External__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Commission Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MCAExtension1__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Approval_Date_Time__c</fullName>
        <label>Manager Approval Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <label>Match Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Offer_Amount__c</fullName>
        <description>The maximum amount of all sellable offers.</description>
        <inlineHelpText>The maximum amount of all sellable offers.</inlineHelpText>
        <label>Max Offer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__ACH_Pmt_amount__c</fullName>
        <label>ACH Pmt amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Activity_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The field will contain count of Activities related to the Opportunity and will be updated by Trigger.</description>
        <inlineHelpText>The field will contain count of Activities related to the Opportunity</inlineHelpText>
        <label>Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Age__c</fullName>
        <formula>IF( IsClosed = true,  (CloseDate -  DATEVALUE(CreatedDate ) ) ,( today()- DATEVALUE(CreatedDate )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Agreement_Requested_Date_Time__c</fullName>
        <label>Agreement Requested Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Agreement_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Agreement_Sent_Date_Time__c</fullName>
        <label>Agreement Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Agreement_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Agreement_Signed_Date_Time__c</fullName>
        <label>Agreement Signed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Agreement_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Amount_Requested__c</fullName>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__App_Received_Date__c</fullName>
        <inlineHelpText>The date that the app was received back signed from the merchant</inlineHelpText>
        <label>App Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__App_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__App_Sent_By__c</fullName>
        <formula>IF(AND(ISBLANK(McaApp__Opener__c),ISBLANK(McaApp__Closer__c)), Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName,

IF(ISBLANK(McaApp__Opener__c), McaApp__Closer__r.FirstName &amp;&quot; &quot;&amp; McaApp__Closer__r.LastName ,

McaApp__Opener__r.FirstName &amp;&quot; &quot;&amp; McaApp__Opener__r.LastName )
)</formula>
        <label>App Sent By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__App_Sent_Date__c</fullName>
        <inlineHelpText>This is the date that the App was sent out to the merchant</inlineHelpText>
        <label>App Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__App_Sent_Received__c</fullName>
        <formula>IF( McaApp__App_Received__c=True,&quot;App Received&quot;, 
IF( McaApp__App_Sent__c = true, &quot;App Sent&quot;, 
null))</formula>
        <inlineHelpText>IF( App_Received__c=True,&quot;App Received&quot;, 
IF( App_Sent__c = true, &quot;App Sent&quot;, 
null))</inlineHelpText>
        <label>App Sent/Received</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__App_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Application_In_Date_Time__c</fullName>
        <label>Application In Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Application_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Application_Missing_Info_Date_Time__c</fullName>
        <label>Application Missing Info Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Application_Missing_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Missing Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Application_Sent_Date_Time__c</fullName>
        <label>Application Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Application_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__ApprovedStage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApprovedStage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Approved_Date_Time__c</fullName>
        <label>Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Approved_Date__c</fullName>
        <inlineHelpText>Date that the deal was approved</inlineHelpText>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Average_Daily_Balance__c</fullName>
        <inlineHelpText>Average Daily Balance from the business bank accounts. This will usually come from the bank statements received from the Merchant.</inlineHelpText>
        <label>Average Daily Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Avg_Monthly_CC_sales__c</fullName>
        <label>Avg Monthly CC sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>